# phenotyping_data

./: .gitattributes  README.md  pyproject.toml
conda/: meta.yaml
src/openalea/phenotyping_data/: __init__.py  fetch.py  registry.txt
